--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,6 +10,7 @@ jobs:
         environment:
           - MYSQL_ALLOW_EMPTY_PASSWORD: 'true'
           - MYSQL_ROOT_HOST: '%'
+          - GEOCODING_API_KEY
 
     working_directory: ~/local-eating
 
@@ -41,7 +42,7 @@ jobs:
 #       - run:
 #           name: Rubocop
 #           command: bundle exec rubocop
-
+      - run: bundle exec bin/webpack
       - run:
           name: run tests
           command: |
