--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,9 +6,7 @@ jobs:
         environment:
           - BUNDLER_VERSION: 2.1.4
           - RAILS_ENV: 'test'
-      - run:
-          command: |
-            echo GEOCODING_API_KEY=${GEOCODING_API_KEY} > ~/.env          
+        env_file: my_env_file.env    
       - image: circleci/mysql:5.6
         environment:
           - MYSQL_ALLOW_EMPTY_PASSWORD: 'true'
