--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,6 +31,10 @@ jobs:
           paths:
             - ./vendor/bundle
           key: v1-dependencies-{{ checksum "Gemfile.lock" }}
+      
+      # 開発環境だとインストールできない為
+      - run: gem install rspec_junit_formatter
+
       - restore_cache:
           keys:
             - rails-demo-yarn-{{ checksum "yarn.lock" }}
@@ -48,6 +52,7 @@ jobs:
 #       - run:
 #           name: Rubocop
 #           command: bundle exec rubocop
+
       - run: bundle exec bin/webpack
       - run:
           name: run tests
