--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,10 +45,9 @@ jobs:
       - run: bundle exec rake db:create
       - run: bundle exec rake db:schema:load
 
-# # rubocopを走らせる記述です。
-#       - run:
-#           name: Rubocop
-#           command: bundle exec rubocop
+      - run:
+          name: Rubocop
+          command: bundle exec rubocop
 
       - run: bundle exec bin/webpack
       - run:
