--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,10 +44,10 @@ jobs:
 
       - run: bundle exec rake db:create
       - run: bundle exec rake db:schema:load
-
-      - run:
-          name: Rubocop
-          command: bundle exec rubocop
+      #   効率化の為一旦コメントアウトする
+      # - run:
+      #     name: Rubocop
+      #     command: bundle exec rubocop
 
       - run: bundle exec bin/webpack
       - run:
